# smallang

./: CMakeLists.txt  LICENSE  README.txt  ast.hpp  ast_node_index.hpp  compile_commands.json  id_cache.cpp  id_cache.hpp  id_index.hpp  ir.hpp  ir_value.hpp  lexer.hpp  main.cpp  ordered_dict.hpp  parser.cpp  parser.hpp  smallang.cpp  smallang_test.cpp  smalllang.cpp  smalllang_test.cpp  source_point.hpp  strong_type.hpp  tests.cpp  token.cpp  token.hpp  vm.cpp  vm.hpp
